--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-slate
+title: bitcoin-intro
+tagline: start using bitcoin
+url: https://bitcoin-intro.com
+image: https://repository-images.githubusercontent.com/328788995/f2f19400-544f-11eb-939f-32e3a923fab3
